# streamllm

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SPEC.md  THIRD_PARTY.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
bench/: benchmark.py
docs/: architecture.md  troubleshooting.md
src/streamllm/: __init__.py  benchmark.py  cache.py  cli.py  config.py  errors.py  generation.py  graph.py  hardware.py  logging_utils.py  memory.py  metrics.py  model.py  prefetch.py  quant.py  runner.py  shard.py  tiering.py
tests/: conftest.py  test_cli_bench.py  test_concurrency.py  test_demotion.py  test_generation.py  test_graph.py  test_graph_gpt2.py  test_hardware.py  test_memory.py  test_oom_stress.py  test_quant.py  test_sampling.py  test_shard.py  test_sliding_window.py  test_streaming.py  test_tiering.py  test_verify.py  test_web.py
web/: calc.js  index.html  server.py  styles.css
web/playground/: app.js  index.html
